--- a/public_html/templates/login-nav.html
+++ b/public_html/templates/login-nav.html
@@ -6,7 +6,7 @@
 	</button>
 	<div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
 		<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" (input)="termStream.next($event.target.value)">
+			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 	</div>
 			<button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
 		</form>
