temp disabled profile

--- a/public_html/templates/edit-profile.html
+++ b/public_html/templates/edit-profile.html
@@ -16,10 +16,10 @@
 						<input type="text" class="form-control" id="profileFirstName" formControlName="profileFirstName">
 					</div>
 					<!-- Angular Validation -->
-					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profileFirstName?.invalid && editProfileForm.controls.profileFirstName?.touched">
+					<!-- <div class="alert alert-danger" *ngIf="editProfileForm.controls.profileFirstName?.invalid && editProfileForm.controls.profileFirstName?.touched">
 						<p *ngIf="editProfileForm.controls.profileFirstName?.errors.maxlength">First Name is too long</p>
 						<p *ngIf="editProfileForm.controls.profileFirstName?.errors.required">First Name is required</p>
-					</div>
+					</div> -->
 
 					<!-- Last Name -->
 					<div class="form-group">
