updated event component

--- a/public_html/templates/edit-event.html
+++ b/public_html/templates/edit-event.html
@@ -42,11 +42,16 @@
 						<label for="attendee-limit" class="col-form-label">Event Attendee Limit:</label>
 						<input type="number" class="form-control" id="attendee-limit">
 					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						<button type="submit" class="btn btn-white">Edit Event</button>
+					</div>
 				</form>
 			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="submit" class="btn btn-white">Edit Event</button>
+			<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
+				<button type="button" class="close" aria-label="Close" (click)="status = null;"><span
+					aria-hidden="true">&times;</span></button>
+				{{ status.message }}
 			</div>
 		</div>
 	</div>
