--- a/public_html/templates/event-attendance-confirmation.html
+++ b/public_html/templates/event-attendance-confirmation.html
@@ -17,6 +17,11 @@
 					</div>
 				</form>
 			</div>
+			<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
+				<button type="button" class="close" aria-label="Close" (click)="status = null;"><span
+					aria-hidden="true">&times;</span></button>
+				{{ status.message }}
+			</div>
 		</div>
 	</div>
 </div>
