--- a/public_html/templates/login-nav.html
+++ b/public_html/templates/login-nav.html
@@ -16,10 +16,10 @@
 					class="rounded-circle m-0"
 					src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0" height="50" width="50">
 				</a>
-				<div class="dropdown-menu mr-auto" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item mr-auto" href="#" data-toggle="modal" data-target="#editProfile">Edit Profile</a>
-					<a class="dropdown-item mr-auto" href="#" data-toggle="modal" data-target="#createEvent">Create An Event</a>
-					<a class="dropdown-item mr-auto" href="#">Signout</a>
+				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="#" data-toggle="modal" data-target="#editProfile">Edit Profile</a>
+					<a class="dropdown-item" href="#" data-toggle="modal" data-target="#createEvent">Create An Event</a>
+					<a class="dropdown-item" href="#">Signout</a>
 				</div>
 			</li>
 		</ul>
