updated create attendance class

--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -84,7 +84,7 @@
 						</p>
 					</div>
 				</a>
-				<a href="#" data-toggle="modal" data-target="#createEventAttendance">
+				<a href="#" data-toggle="modal" data-target="#createEventAttendance" (click)="getEventId(this.event.eventId)">
 					<div class="card-footer">
 						<small class="text-muted align-content-center"><i class="fa fa-users" aria-hidden="true"></i>
 							Attend Event
