edit button label

--- a/public_html/templates/create-event.html
+++ b/public_html/templates/create-event.html
@@ -80,7 +80,7 @@
 						 </div>
 					</form>
 					<div class="modal-footer">
-						<upload-image (cloudinarySecureUrlChangeEvent)="onCloudinarySecureUrlChange($event)"></upload-image>
+						<upload-image [buttonLabel]="'Create Event'" (cloudinarySecureUrlChangeEvent)="onCloudinarySecureUrlChange($event)"></upload-image>
 					</div>
 				</div>
 
