--- a/public_html/templates/image.html
+++ b/public_html/templates/image.html
@@ -3,5 +3,5 @@
 		<label for="image" class="modal-labels">Upload an image</label>
 		<input type="file" name="image" id="image" ng2FileSelect [uploader]="uploader" />
 	</div>
-	<button type="submit" class="btn btn-info btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i> {{ buttonLabel }}</button>
+	<button type="submit" class="btn btn-info btn-lg"><i class="fa" [ngClass]="icon" aria-hidden="true"></i> {{ buttonLabel }}</button>
 </form>
