--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -6,11 +6,11 @@
 			<div class="col-md-6 align-content-center mt-2">
 				<div class="card event bg-dark text-white">
 					<h3 class="text-center"><i class="fa fa-wifi text-danger" aria-hidden="true"></i>ibing now</h3>
-					<img class="card-img-top" src="https://dl.dropboxusercontent.com/s/9ojadnxp8n2b7oq/bar.jpg?dl=0"
+					<img class="card-img-top" src="{{ event.eventImage }}"
 						  alt="Card image cap" height="400">
 					<div class="card-body text-center bg-dark text-white">
 						<img class="rounded-circle"
-							  src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0"
+							  src="{{ profile.profileImage }}"
 							  height="100" width="100">
 						<p class="card-text">
 							<small class="text-muted">Hosted By: {{ profile.profileFirstName }}</small>
@@ -24,7 +24,6 @@
 							<small class="text-muted">@:</small>
 							{{ event.eventAddress }}
 						</p>
-						<p class="card-text my-1">{{ event.eventAddress }}</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Starts:</small>
 							{{ event.eventStartDateTime | date: "MM/dd/yy hh:mm a" }}
@@ -39,7 +38,7 @@
 						</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Attending:</small>
-							{{ event.eventAttendanceNumberAttend }}
+							{{ getNumberAttending() }}
 						</p>
 						<div class="dropdown">
 							<button class="btn btn-secondary dropdown-toggle"
@@ -80,7 +79,7 @@
 									<div class="col-md-6">
 										<div *ngFor="let attendanceProfile of attendanceProfiles" class="card border-0">
 											<div class="top-picture">
-												<img class="card-img-top rounded-circle" src="./image/look-lady.jpg"
+												<img class="card-img-top rounded-circle" src="{{ attendanceProfile.profileImage }}"
 													  alt="Card image cap" height="200">
 											</div>
 											<div class="card-body bg-dark text-white">
