--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -3,6 +3,7 @@
 <edit-event></edit-event>
 <event-attend-confirm></event-attend-confirm>
 <login-nav></login-nav>
+<edit-profile></edit-profile>
 <div class="container-fluid py-4 bg-dark">
 	<div class="row mx-0">
 		<div class="col-md-4 align-content-center">
