--- a/public_html/templates/edit-profile.html
+++ b/public_html/templates/edit-profile.html
@@ -9,7 +9,7 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<form class="form-horizontal" [formGroup]="editProfileForm" novalidate (submit)="editProfile();">
+				<form class="form-horizontal" [formGroup]="editProfileForm" novalidate (submit)="imageComponent.uploadImage();">
 					<!-- First Name -->
 					<div class="form-group">
 						<label for="profileFirstName" class="col-form-label">First Name:</label>
@@ -27,7 +27,8 @@
 						<input type="text" class="form-control" id="profileLastName" formControlName="profileLastName">
 					</div>
 					<!-- Angular Validation -->
-					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profileLastName?.invalid && editProfileForm.controls.profileLastName?.touched">
+					<div class="alert alert-danger"
+						 *ngIf="editProfileForm.controls.profileLastName?.invalid && editProfileForm.controls.profileLastName?.touched">
 						<p *ngIf="editProfileForm.controls.profileLastName?.errors.maxlength">Last Name is too long</p>
 						<p *ngIf="editProfileForm.controls.profileLastName?.errors.required">Last Name is required</p>
 					</div>
@@ -77,7 +78,7 @@
 					</div>
 				</form>
 				<div class="modal-footer">
-					<upload-image [buttonLabel]="'Edit Profile'" [icon]="'fa-user'" (cloudinarySecureUrlChangeEvent)="onCloudinarySecureUrlChange($event)"></upload-image>
+					<upload-image [buttonLabel]="'Edit Profile'" [icon]="'fa-user'" (cloudinarySecureUrlChangeEvent)="onCloudinarySecureUrlChange($event)">Edit Profile</upload-image>
 				</div>
 			</div>
 
