--- a/public_html/templates/edit-profile.html
+++ b/public_html/templates/edit-profile.html
@@ -78,7 +78,7 @@
 					</div>
 				</form>
 				<div class="modal-footer">
-					<upload-image [buttonLabel]="'Edit Profile'" [icon]="'fa-user'" (cloudinarySecureUrlChangeEvent)="onCloudinarySecureUrlChange($event)">Edit Profile</upload-image>
+					<upload-image [buttonLabel]="'Edit Profile'" [icon]="'fa-user'" (cloudinarySecureUrlChangeEvent)="onCloudinarySecureUrlChange($event)"></upload-image>
 				</div>
 			</div>
 
