edit event page

--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -13,7 +13,7 @@
 							  src="{{ profile.profileImage }}"
 							  height="100" width="100">
 						<p class="card-text">
-							<small class="text-muted">Hosted By: {{ profile.profileFirstName }}</small>
+							<small class="text-muted">Hosted By: {{ profile.profileUserName }}</small>
 						</p>
 						<div class="text-center">
 							<i class="fa fa-thermometer-three-quarters fa-2x m-2 text-warning" aria-hidden="true"></i>
