--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -63,7 +63,7 @@
 							<small class="text-muted">Hosted By: Zach</small>
 						</p>
 						<p class="card-text mb-1">
-						<p class="fa fa-star" aria-hidden="true"><i class="fa fa-thermometer-full fa-2x" aria-hidden="true"></i></p>
+						<p class="" aria-hidden="true"><i class="fa fa-thermometer-full fa-2x text-danger" aria-hidden="true"></i></p>
 						<h4 class="card-title">{{ event.eventName }}</h4>
 						<p class="card-text">{{ event.eventAddress }}</p>
 						<p class="card-text">{{ event.eventDetail }}</p>
