--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -24,7 +24,7 @@
 					{{ profile.profileFirstName }}</h4>
 					<p class="card-text mb-1">
 					<p class="fa fa-thermometer-full fa-2x text-danger" aria-hidden="true"><i class="fa fa-thermomenter-full text-danger" aria-hidden="true"></i></p>
-					<p class="card-text mt-0 mb-2 text-muted">
+					<p class="card-text mt-0 mb-2">
 						<small class="text-muted">Username:</small><br>
 						{{ profile.profileUserName }}</p>
 					<p class="card-text mt-0 mb-2">
