--- a/public_html/templates/create-event.html
+++ b/public_html/templates/create-event.html
@@ -85,7 +85,7 @@
 				</div>
 
 				<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
-					<button type="button" class="close" aria-label="Close" (click)="status = null;"><span
+					<button type="button" class="close btn btn-warning" aria-label="Close" (click)="status = null;"><span
 						aria-hidden="true">&times;</span></button>
 					{{ status.message }}
 				</div>
