--- a/public_html/templates/login-nav.html
+++ b/public_html/templates/login-nav.html
@@ -5,10 +5,7 @@
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-		<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" (input)="termStream.next($event.target.value)" >
-			 <button class="btn btn-outline-warning my-2 my-sm-0">Search</button>
-		</form>
+
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -17,6 +14,8 @@
 					src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0" height="50" width="50">
 				</a>
 				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+					<a class="dropdwon-item" href="#">Search Users</a>
+
 					<a class="dropdown-item" href="#" data-toggle="modal" data-target="#editProfile">Edit Profile</a>
 					<a class="dropdown-item" href="#" data-toggle="modal" data-target="#createEvent">Create An Event</a>
 					<a class="dropdown-item" href="#">Signout</a>
