--- a/src/app.css
+++ b/src/app.css
@@ -42,7 +42,7 @@
 /****************
 *Rate-event
 *****************/
-.rating-event {
+.event {
 	/*background-image: url("./image/crowd.jpeg");*/
 	background-position: center;
 	background-repeat: no-repeat;
@@ -81,6 +81,12 @@ label, .modal-header {
 
 /**Landing Page CSS **/
 #landing-page {
+	background-image: url(https://images.unsplash.com/photo-1497911270199-1c552ee64aa4?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
+	background-size: cover;
+	background-position: center;
+	height: 100vh;
+}
+#home {
 	background-image: url(https://images.unsplash.com/photo-1497911270199-1c552ee64aa4?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
 	background-size: cover;
 	background-position: center;
