--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -4,7 +4,7 @@
 <event-attend-confirm></event-attend-confirm>
 <login-nav></login-nav>
 <edit-profile></edit-profile>
-<div class="container-fluid py-4 bg-dark">
+<div class="container-fluid py-4 bg-dark" id="home">
 	<div class="row mx-0">
 		<div class="col-md-4 align-content-center">
 			<div class="card">
