--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -7,7 +7,7 @@
 <div class="container-fluid py-4 bg-dark" id="home">
 	<div class="row mx-0">
 		<div class="col-md-4 align-content-center">
-			<div class="card">
+			<div class="card bg-dark">
 				<div class="card-header">
 					Your Profile
 				</div>
