--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -55,7 +55,7 @@
 		</div>
 		<div class="col-md-6 mb-4">
 			<div>
-				<button type="button" class="btn btn-outline-warning w-100 mb-2" data-toggle="modal"
+				<button type="button" class="btn btn-outline-warning w-100 mb-2 bg-dark" data-toggle="modal"
 						  data-target="#createEvent"><i class="fa fa-plus" aria-hidden="true"></i> Create
 					An Event
 				</button>
