small html changes

--- a/public_html/templates/landing-page.html
+++ b/public_html/templates/landing-page.html
@@ -5,7 +5,7 @@
 			<div class="col-lg-12">
 				<div class="content">
 					<h1>CrowdVibe</h1>
-					<h3>The Spontaneous Social Media App</h3>
+					<h3>The Spontaneous Social Interaction App</h3>
 					<hr>
 					<button type="button" class="btn-default btn-secondary btn-lg" data-toggle="modal" data-target="#join">
 						<i class="fa fa-users fa-fw"></i> Start Vibing
