--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -21,10 +21,6 @@
 						<h4 class="card-title"></h4>
 						<p class="card-text">{{ event.eventDetail }}</p>
 						<p class="card-text my-1">
-							<small class="text-muted">@:</small>
-							{{ event.eventAddress }}
-						</p>
-						<p class="card-text my-1">
 							<small class="text-muted">Starts:</small>
 							{{ event.eventStartDateTime | date: "MM/dd/yy hh:mm a" }}
 						</p>
@@ -73,7 +69,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 mt-2">
-							<h3 class="bg-transparent text-white text-center">Who Attended</h3>
+							<h3 class="bg-transparent text-black text-center">The Crowd Attending</h3>
 							<div class="container mb-2">
 								<div class="row">
 									<div class="col-md-6">
