edit home background

--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -16,7 +16,7 @@
 							<small class="text-muted">Hosted By: {{ profile.profileUserName }}</small>
 						</p>
 						<div class="text-center">
-							<i class="fa fa-thermometer-three-quarters fa-2x m-2 text-warning" aria-hidden="true"></i>
+							<i class="fa fa-thermometer-quarter fa-2x m-2 text-primary" aria-hidden="true"></i>
 						</div>
 						<h4 class="card-title"></h4>
 						<p class="card-text">{{ event.eventDetail }}</p>
