--- a/public_html/templates/login-nav.html
+++ b/public_html/templates/login-nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-	<a class="navbar-brand" href="#">CrowdVibe</a>
+	<a class="navbar-brand" routerLink="/home">CrowdVibe</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
